# stdexecutils

./: CMakeLists.txt  README.md  conanfile.py
cmake/: Config.cmake.in
include/stdexecutils/: channel.hpp  qthread_scheduler.hpp  spawn_stdfuture.hpp
include/stdexecutils/detail/: immovable.hpp
test_package/: CMakeLists.txt
test_package/src/: example.cpp
tests/: CMakeLists.txt  channel_test.cpp  stdexecutils_qt_tests.cpp
